--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [""http", "https", "ftp", "ftps", "file"],
       "js": ["content.js"],
       "run_at": "document_start"
     }
