--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 
   "content_scripts": [
     {
-      "matches": ["http", "https", "ftp", "ftps", "file"],
+      "matches": ["http://*/*", "https://*/*", "ftp://*/*", "file://*/*"],
       "js": ["content.js"],
       "run_at": "document_start"
     }
